# aioclient

./: README.md  main.py  pyproject.toml
src/aioclient/: __init__.py  _aioclient.py  aioclient.py
