[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "client_winogrona"
version = "1.2.1"
authors = [
  { name="winogrona", email="admin@winogrona.cc" },
]
description = "A simple asyncio client :0"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"